--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	</center>
 	<div id="book">
 			<img class="pages" id="backpages" src="images/all/bookcase.png">
-		<a href="../foxfables/foxgrapes1.html"><img class="books" id="foxgrapes" src="images/all/foxgrapesbook.png"></a>				
-		<a href="../foxfables/foxcrow1.html"><img class="books" id="foxcrow" src="images/all/foxcrowbook.png"></a>
-		<a href="../foxfables/foxstork1.html"><img class="books" id="foxstork" src="images/all/foxstorkbook.png"></a>	
+		<a href="foxgrapes1.html"><img class="books" id="foxgrapes" src="images/all/foxgrapesbook.png"></a>				
+		<a href="foxcrow1.html"><img class="books" id="foxcrow" src="images/all/foxcrowbook.png"></a>
+		<a href="foxstork1.html"><img class="books" id="foxstork" src="images/all/foxstorkbook.png"></a>	
 	</div>
 </body> 
 </html>
