removed foxfables tag

--- a/foxcrow1.html
+++ b/foxcrow1.html
@@ -24,14 +24,14 @@
 		
 	</center>
 
-	<a href="../foxfables/index.html">
+	<a href="index.html">
 			<div class="homebutton"></div>
 	</a>
 
-		<a href="../foxfables/foxcrow2.html">
+		<a href="foxcrow2.html">
 			<div class="nextarrow"></div>
 		</a>
-		<!-- <a href="../foxfables/foxcrow3.html">
+		<!-- <a href="foxcrow3.html">
 			<div class="backarrow"></div>
 		</a> -->
 
