--- a/foxcrow3.html
+++ b/foxcrow3.html
@@ -23,14 +23,14 @@
 			<div id="title"></div>
 			
 	</center>
-	<a href="../foxfables/index.html">
+	<a href="index.html">
 			<div class="homebutton"></div>
 	</a>
 
-		<a href="../foxfables/foxcrow4.html">
+		<a href="foxcrow4.html">
 			<div class="nextarrow"></div>
 		</a>
-		<a class="backarrow" href="../foxfables/foxcrow2.html">
+		<a class="backarrow" href="foxcrow2.html">
 			
 		</a>
 		<div id="book">
