--- a/foxcrow4.html
+++ b/foxcrow4.html
@@ -23,14 +23,14 @@
 			<div id="title"></div>
 			
 	</center>
-	<a href="../foxfables/index.html">
+	<a href="index.html">
 			<div class="homebutton"></div>
 	</a>
 
-		<!-- <a href="../foxfables/foxgrapes4.html">
+		<!-- <a href="foxgrapes4.html">
 			<div class="nextarrow"></div>
 		</a> -->
-		<a class="backarrow" href="../foxfables/foxcrow3.html">
+		<a class="backarrow" href="foxcrow3.html">
 			
 		</a>
 		<div id="book">
