--- a/foxgrapes1.html
+++ b/foxgrapes1.html
@@ -26,11 +26,11 @@
 			
 	</center>
 
-	<a href="../foxfables/index.html">
+	<a href="index.html">
 			<div class="homebutton"></div>
 	</a>
 
-		<a href="../foxfables/foxgrapes2.html">
+		<a href="foxgrapes2.html">
 			<div class="nextarrow"></div>
 		</a>
 		<!-- <a class="backarrow" href="">
