--- a/foxgrapes2.html
+++ b/foxgrapes2.html
@@ -22,14 +22,14 @@
 			<div id="title"></div>
 			
 	</center>
-	<a href="../foxfables/index.html">
+	<a href="index.html">
 			<div class="homebutton"></div>
 	</a>
 
-		<a href="../foxfables/foxgrapes3.html">
+		<a href="foxgrapes3.html">
 			<div class="nextarrow"></div>
 		</a>
-		<a class="backarrow" href="../foxfables/foxgrapes1.html">
+		<a class="backarrow" href="foxgrapes1.html">
 			
 		</a>
 		<div id="book">
