--- a/foxstork6.html
+++ b/foxstork6.html
@@ -24,14 +24,14 @@
 		
 	</center>
 
-	<a href="../foxfables/index.html">
+	<a href="index.html">
 			<div class="homebutton"></div>
 	</a>
 
-		<a href="../foxfables/foxstork7.html">
+		<a href="foxstork7.html">
 			<div class="nextarrow"></div>
 		</a>
-		<a href="../foxfables/foxstork5.html">
+		<a href="foxstork5.html">
 			<div class="backarrow"></div>
 		</a>
 
