--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div id="leftgradient"></div>
 	<div id="rightgradient"></div>
 	
-<a href="../foxfables/colophon.html">
+<a href="colophon.html">
 			<div class="colophon"></div>
 	</a>
 
