--- a/foxgrapes3.html
+++ b/foxgrapes3.html
@@ -22,13 +22,13 @@
 			<div id="title"></div>
 		
 	</center>
-	<a href="../foxfables/index.html">
+	<a href="index.html">
 			<div class="homebutton"></div>
 	</a>
-		<!-- <a href="../foxfables/foxandgrapes2.html">
+		<!-- <a href="foxandgrapes2.html">
 			<div class="nextarrow"></div>
 		</a> -->
-		<a href="../foxfables/foxgrapes2.html">
+		<a href="foxgrapes2.html">
 			<div class="backarrow"></div>
 		</a>
 
