--- a/foxstork2.html
+++ b/foxstork2.html
@@ -24,14 +24,14 @@
 		
 	</center>
 
-	<a href="../foxfables/index.html">
+	<a href="index.html">
 			<div class="homebutton"></div>
 	</a>
 
-		<a href="../foxfables/foxstork3.html">
+		<a href="foxstork3.html">
 			<div class="nextarrow"></div>
 		</a>
-		<a href="../foxfables/foxstork1.html">
+		<a href="foxstork1.html">
 			<div class="backarrow"></div>
 		</a>
 
