--- a/foxstork5.html
+++ b/foxstork5.html
@@ -24,14 +24,14 @@
 		
 	</center>
 
-	<a href="../foxfables/index.html">
+	<a href="index.html">
 			<div class="homebutton"></div>
 	</a>
 
-		<a href="../foxfables/foxstork6.html">
+		<a href="foxstork6.html">
 			<div class="nextarrow"></div>
 		</a>
-		<a href="../foxfables/foxstork4.html">
+		<a href="foxstork4.html">
 			<div class="backarrow"></div>
 		</a>
 
