--- a/foxstork7.html
+++ b/foxstork7.html
@@ -24,12 +24,12 @@
 		
 	</center>
 
-	<a href="../foxfables/index.html">
+	<a href="index.html">
 			<div class="homebutton"></div>
 	</a>
 
 		
-		<a href="../foxfables/foxstork6.html">
+		<a href="foxstork6.html">
 			<div class="backarrow"></div>
 		</a>
 
